ci: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,8 @@ jobs:
                   if [ "${{ matrix.arch }}" == "aarch64-linux-gnu" ]; then
                     echo "Setting up for aarch64-linux-gnu";
                     sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc-dev-arm64-cross
+                    which aarch64-linux-gnu-gcc
+                    which aarch64-linux-gnu-g++
                     aarch64-linux-gnu-gcc --version 
                     aarch64-linux-gnu-g++ --version
                   fi
