--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,11 +144,11 @@ jobs:
               run: |
                   if [ "${{ matrix.arch }}" == "aarch64-linux-gnu" ]; then
                     xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y -a arm64 --root --cross=aarch64-linux-gnu- --bin=/usr/bin
+                    xmake build -v -D --root
                   else
                     xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
+                    xmake build -v -D 
                   fi
-                  echo "Clean build done.. next building..."
-                  xmake build -v -D
 
             - name: Stripping
               run: |
